Add API for listing branches and tags
